--- a/dockerfiles/dev/django/Dockerfile
+++ b/dockerfiles/dev/django/Dockerfile
@@ -1,13 +1,14 @@
-FROM python
+FROM python:3.10
 
 LABEL maintainer="matin20001313@gmail.com"
 
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /user/src/app
+WORKDIR /usr/src/app
 
 COPY ./requirements.txt .
 
-RUN pip install --upgrade && pip install -r requirements.txt
+RUN pip install --upgrade pip && pip install -r requirements.txt
+
 
 COPY ./core .
