--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,34 +2,39 @@ version: "3.8"
 
 services:
   db:
-    container_name: db
     image: postgres
-    volumes:
-      - ./postgres/data:/var/lib/postgresql/data
+    container_name: db
     environment:
       POSTGRES_USER: username
       POSTGRES_PASSWORD: password
       POSTGRES_DB: default_database
+    volumes:
+      - ./postgres/data:/var/lib/postgresql/data
     expose:
       - 5432
     restart: always
-#  =====================================================================================================================
+
   backend:
-    container_name: backend
     build:
       context: .
       dockerfile: ./dockerfiles/dev/django/Dockerfile
+    container_name: backend
     volumes:
       - ./core:/usr/src/app
     working_dir: /usr/src/app
     command: python manage.py runserver 0.0.0.0:8000
+    environment:
+      PG_USER: username
+      PG_PASSWORD: password
+      PG_NAME: default_database
+      PG_HOST: db
+      PG_PORT: 5432
+      DEBUG: True
     ports:
       - "8000:8000"
-    environment:
-      - DEBUG=True
     depends_on:
       - db
-#  =====================================================================================================================
+  #  =====================================================================================================================
 
   smtp4dev:
     image: rnwood/smtp4dev:v3
@@ -39,7 +44,7 @@ services:
       - '25:25'
       - '143:143'
     volumes:
-        - smtp4dev-data:/smtp4dev
+      - smtp4dev-data:/smtp4dev
     environment:
       - ServerOptions__HostName=smtp4dev
 
