--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,4 +14,12 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
+    location /__debug__/ {
+    proxy_pass http://backend:8000/__debug__/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
+
