Create Mino And Pytest

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,25 +1,30 @@
 server {
     listen 80;
 
+
+    client_max_body_size 20M;
+
+
     location /static/ {
         alias /usr/src/app/staticfiles/;
     }
+
 
     location /media/ {
         alias /usr/src/app/media/;
     }
 
+
     location / {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
     }
-    location /__debug__/ {
-    proxy_pass http://backend:8000/__debug__/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
 
+
+    location /__debug__/ {
+        proxy_pass http://backend:8000/__debug__/;
+        proxy_set_
