--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -14,6 +14,20 @@ services:
       - 5432
     restart: always
 
+  minio:
+    image: minio/minio
+    container_name: minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+    volumes:
+      - minio_data:/data
+    ports:
+      - "9000:9000"   # API endpoint
+      - "9001:9001"   # Web UI
+    restart: always
+
   backend:
     build:
       context: .
@@ -36,10 +50,16 @@ services:
       PG_HOST: db
       PG_PORT: 5432
       DEBUG: True
+
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+      MINIO_BUCKET_NAME: mybucket
+      MINIO_ENDPOINT: http://minio:9000
     expose:
       - 8000
     depends_on:
       - db
+      - minio
     restart: always
 
   nginx:
@@ -59,3 +79,4 @@ volumes:
   postgres_data:
   static_volume:
   media_volume:
+  minio_data:
