--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,9 +10,14 @@ server {
     }
 
 
-    location /media/ {
-        alias /usr/src/app/media/;
+   location /media/ {
+    proxy_pass http://minio:9000/mybucket/;
+    proxy_set_header Host $host;
     }
+
+
+
+
 
 
     location / {
